--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h1>I'm a <span id="animated-text"></span></h1>
         </div>
         <div class="image-container">
-            <img src="D:\FAREWELL 2k24\sash\IMG_8861_1.JPG" alt="Sashank Chittella">
+            <img src="assests/IMG_8861_1.JPG" alt="Sashank Chittella">
         </div>
     </div>
   
